--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>I search to balance function and form</p>
             <p>The technologies that I use are <span class="bold">HTML, CSS, Javascript</span> and <span
                     class="bold">React.</span></p>
-            <p>Here you can see what i’ve buildt. If you are interested, <a href="#contact"><span
+            <p>Here you can see what i’ve built. If you are interested, <a href="#contact"><span
                         class="bold bold-blue">let’s talk!</span></a></p>
         </section>
     </section>
