--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Natalí Palacio Pastor</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156245874-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156245874-1');
+    </script>
+
 </head>
 
 <body>
@@ -36,7 +46,7 @@
 
 
         <section class="me-description">
-            <p>Hi! I’m a <span class="bold">Frontend</span> developer from Argentina, and I can help you build web
+            <p>Hi! I’m a <span class="bold">Frontend</span> developer from Argentina, and I can help you build AWESOME web
                 solutions. </p>
             <p>I search to balance function and form</p>
             <p>The technologies that I use are <span class="bold">HTML, CSS, Javascript</span> and <span
@@ -44,6 +54,8 @@
             <p>Here you can see what i’ve built. If you are interested, <a href="#contact"><span
                         class="bold bold-blue">let’s talk!</span></a></p>
         </section>
+
+        
     </section>
 
 
