Added Personal Blog proyect

--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
 
     <section id="proyects">
         <h1 class="flex-center">Proyects</h1>
+
+        <div class="flex-center proyect-1">
+            <div>
+                <h3 class="proyect-title">Personal Blog</h3>
+            </div>
+            <img src="img/blog.png" alt="blog"
+                class="proyect-img">
+            <div>
+                <a href="https://github.com/Natali-PP/blog"><button class="view-repo"><span
+                            class="button-text">VIEW REPO</span></button></a>
+                <a href="https://natali-pp.github.io/blog/"><span class="button-text"><button class="view-repo">VIEW PROYECT</button>
+                        </span></a>
+                
+            </div>
+        </div>
+
         <div class="flex-center proyect-1">
             <div>
                 <h3 class="proyect-title">Random Quote Machine</h3>
