changed about me

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 
         <section class="me-description">
-            <p>Hi! I’m a <span class="bold">Frontend</span> developer from Argentina, and I can help you build AWESOME web
+            <p>Hi! I’m a <span class="bold">Javascript</span> developer from Argentina, and I can help you build AWESOME web
                 solutions. </p>
             <p>I search to balance function and form</p>
-            <p>The technologies that I use are <span class="bold">HTML, CSS, Javascript</span> and <span
-                    class="bold">React.</span></p>
+            <p>The technologies that I use are <span class="bold">HTML, CSS, Javascript, React</span> and <span
+                    class="bold">Node.</span></p>
             <p>Here you can see what i’ve built. If you are interested, <a href="#contact"><span
                         class="bold bold-blue">let’s talk!</span></a></p>
         </section>
