--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
     <section id="proyects">
         <h1 class="flex-center">Proyects</h1>
 
+        <div class="flex-center proyect-1">
+            <div>
+                <h3 class="proyect-title">Asistocovid</h3>
+            </div>
+            <img src="img/Asistocovid1.png" alt="asistocovid"
+                class="proyect-img">
+            <div>
+                <a href="https://asistocovid.com.ar/"><span class="button-text"><button class="view-repo">VIEW PROYECT</button>
+                        </span></a>
+                
+            </div>
+        </div>
+
 
         <div class="flex-center proyect-1">
             <div>
