Cambios para enfatizar las tecnologías

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
         <div class="flex-center proyect-1">
             <div>
-                <h3 class="proyect-title">Asistocovid</h3>
+                <h3 class="proyect-title">React, Javascript, CSS, HTML, Angular, Figma</h3>
+                <h4 class="subtitle">Asistocovid </h4>
             </div>
             <img src="img/Asistocovid1.png" alt="asistocovid"
                 class="proyect-img">
@@ -83,24 +84,11 @@
         </div>
 
 
-        <div class="flex-center proyect-1">
-            <div>
-                <h3 class="proyect-title">Personal Blog</h3>
-            </div>
-            <img src="img/blog.png" alt="blog"
-                class="proyect-img">
-            <div>
-                <a href="https://github.com/Natali-PP/blog" target="_blank"><button class="view-repo"><span
-                            class="button-text">VIEW REPO</span></button></a>
-                <a href="https://natali-pp.github.io/blog/" target="_blank"><span class="button-text"><button class="view-repo">VIEW PROYECT</button>
-                        </span></a>
-                
-            </div>
-        </div>
 
         <div class="flex-center proyect-1">
             <div>
-                <h3 class="proyect-title">MERN Exercise tracker</h3>
+                <h3 class="proyect-title">React, Node, Javascript, React Material-UI, CSS, HTML</h3>
+                <h3 class="subtitle">MERN Exercise tracker</h3>
             </div>
             <img src="img/Exercise-Tracker-1.png" alt="blog"
                 class="proyect-img">
@@ -114,7 +102,8 @@
 
         <div class="flex-center proyect-1">
             <div>
-                <h3 class="proyect-title">Random Quote Machine</h3>
+                <h3 class="proyect-title">React, Javascript, CSS, HTML, Figma</h3>
+                <h3 class="subtitle">Random Quote Machine</h3>
             </div>
             <img src="img/Screenshot_2019-12-12 Random Quote Machine.png" alt="random-quote-machine-screenshot"
                 class="proyect-img">
@@ -129,7 +118,8 @@
 
         <div class="flex-center proyect-2">
             <div class="proyect-title">
-                <h3>Pomodoro Clock</h3>
+                <h3 class="proyect-title">React, Javascript, CSS, HTML</h3>
+                <h3 class="subtitle">Pomodoro Clock</h3>
             </div>
             <img src="img/Pomodoro clock.png" alt="random-quote-machine-screenshot" class="proyect-img">
             <a href="https://github.com/Natali-PP/FCC-pomodoro-clock" target="_blank"><button class="view-repo"><span
@@ -139,7 +129,8 @@
 
         <div class="flex-center proyect-3">
             <div>
-                <h3 class="proyect-title">React Drum Machine</h3>
+                <h3 class="proyect-title">React, Javascript, CSS, HTML</h3>
+                <h3 class="subtitle" style="padding-bottom:1.75rem;">React Drum Machine</h3>
             </div>
             <img src="img/React Drum Machine.png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
@@ -152,7 +143,8 @@
 
         <div class="flex-center proyect-4">
             <div class="proyect-title">
-                <h3>Taco Joint</h3>
+                <h3 class="proyect-title">Javascript, CSS, HTML</h3>
+                <h3 class="subtitle">Taco Joint</h3>
             </div>
             <img src="img/Terry's Taco Joint .png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
@@ -167,7 +159,8 @@
 
         <div class="flex-center proyect-5">
             <div class="proyect-title">
-                <h3>Javascript Calculator</h3>
+                <h3 class="proyect-title">React, Javascript, CSS, HTML</h3>
+                <h3 class="subtitle">Javascript Calculator</h3>
             </div>
             <img src="img/Calculator-App.png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
@@ -181,7 +174,8 @@
 
         <div class="flex-center proyect-6">
             <div class="proyect-title">
-                <h3>Personal Blog Design</h3>
+              <h3> CSS, HTML, Figma</h3>
+                <h3 class="subtitle">Personal Blog Design</h3>
             </div>
             <img src="img/GridBlog Layout .png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
@@ -194,7 +188,8 @@
         </div>
         <div class="flex-center proyect-7">
             <div class="proyect-title">
-                <h3>Vainilla JS Drum Machine</h3>
+              <h3>Javascript, CSS, HTML</h3>
+                <h3 class="subtitle">Vainilla JS Drum Machine</h3>
             </div>
             <img src="img/TAMBOR BASOFIA.png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
@@ -208,7 +203,8 @@
 
         <div class="flex-center proyect-8">
             <div class="proyect-title">
-                <h3>MeT's Bootcamp Landing Page</h3>
+              <h3> CSS, HTML, Zeplin</h3>
+                <h3 class="subtitle">MeT's Bootcamp Landing Page</h3>
             </div>
             <img src="img/Bootcamp web-visible.png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
@@ -220,9 +216,26 @@
             </div>
         </div>
 
+        <div class="flex-center proyect-1">
+            <div>
+                <h3 class="proyect-title">Hugo, Go</h3>
+                <h4 class="subtitle">Aersonal Blog</h4>
+            </div>
+            <img src="img/blog.png" alt="blog"
+                class="proyect-img">
+            <div>
+                <a href="https://github.com/Natali-PP/blog" target="_blank"><button class="view-repo"><span
+                            class="button-text">VIEW REPO</span></button></a>
+                <a href="https://natali-pp.github.io/blog/" target="_blank"><span class="button-text"><button class="view-repo">VIEW PROYECT</button>
+                        </span></a>
+                
+            </div>
+        </div>
+
         <div class="flex-center proyect-9">
             <div class="proyect-title">
-                <h3>Javascript Documentation Page</h3>
+                <h3>CSS, HTML</h3>
+                <h3 class="subtitle">Javascript Documentation Page</h3>
             </div>
             <img src="img/JS Documentation.png" alt="random-quote-machine-screenshot" class="proyect-img">
             <div>
