Proyecto asistocovid en mayusculas

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="flex-center proyect-1">
             <div>
                 <h3 class="proyect-title">React, Javascript, CSS, HTML, Angular, Figma</h3>
-                <h4 class="subtitle">Asistocovid </h4>
+                <h4 class="subtitle">ASISTOCOVID </h4>
             </div>
             <img src="img/Asistocovid1.png" alt="asistocovid"
                 class="proyect-img">
